--- a/src/assets/css/basic/_global.scss
+++ b/src/assets/css/basic/_global.scss
@@ -7,3 +7,9 @@
   margin: 1rem 0;
   // min-height: calc(100vh - 190px);
 }
+
+.sitemapblock {
+  position: absolute;
+  color: blue;
+  z-index: 999;
+}
